<resources>
    <string name="app_name">PixelFrame</string>
    <string name="appName">PixelFrame v0.1</string>
    <string name="mainViewTitleText">Choose an Image</string>
    <string name="loadButtonText">Load Image</string>
    <string name="convertButtonText">Convert Image</string>
    <string name="convertViewTitleText">Convert image to PicoFrame bitmap</string>
    <string name="previewButtonText">Show Preview</string>
    <string name="transferButtonText">Transfer to PicoFrame</string>
    <string name="transferViewTitleText">Transfer to PicoFrame</string>
    <string name="firstParamHintText">First choose algorithm to unlock parameter slider</string>
    <string name="brightnessHintText">Brightness from 0 to 100</string>
    <string name="displayTimeHintText">Display time in seconds (max. 600)</string>
    <string name="slotText">Slot:</string>
    <string name="brightnessNameText">Brightness</string>
    <string name="timeNameText">Time [s]</string>
    <string name="sendButtonText">Tune &amp; Send…</string>
</resources>