<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.TransferActivity">

    <!-- Info Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoBlock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F0EDE5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Tytuł widoku -->
        <TextView
            android:id="@+id/transferViewTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transferViewTitleText"
            android:textSize="18sp"
            android:gravity="center"
            android:fontFamily="sans-serif"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Spacer -->
        <View
            android:id="@+id/infoSpacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/transferViewTitleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Pic Block -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/picBlock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/infoBlock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="TODO"
            android:scaleType="fitCenter" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsBlock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/picBlock"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Spacer 2H -->
        <View
            android:id="@+id/spacer_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08" />

        <!-- Klawisze slotów 4H -->
        <LinearLayout
            android:id="@+id/slot_buttons_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/spacer_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/slotText"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp" />

        </LinearLayout>

        <!-- Spacer 2H -->
        <View
            android:id="@+id/spacer_middle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/slot_buttons_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08" />

        <!-- Brightness Slider Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/brightness_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/spacer_middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.16">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightnessNameText"
                android:textSize="14sp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline_top" />

            <SeekBar
                android:id="@+id/brightness_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/brightness_input"
                app:layout_constraintTop_toBottomOf="@id/guideline_top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.7"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/brightness_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="number"
                android:inputType="number"
                android:textSize="14sp"
                android:hint="@string/brightnessHintText"
                app:layout_constraintStart_toEndOf="@id/brightness_slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.15"
                app:layout_constraintTop_toBottomOf="@id/guideline_top"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- Spacer 1H -->
        <View
            android:id="@+id/spacer_middle_small"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/brightness_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.04" />

        <!-- Time Slider Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/time_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/spacer_middle_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.16">

            <!-- Guideline to limit height of the TextView -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_time_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeNameText"
                android:textSize="14sp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline_time_top" />

            <SeekBar
                android:id="@+id/time_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_input"
                app:layout_constraintTop_toBottomOf="@id/guideline_time_top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.7"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/time_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="number"
                android:inputType="number"
                android:textSize="14sp"
                android:hint="@string/displayTimeHintText"
                app:layout_constraintStart_toEndOf="@id/time_slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.15"
                app:layout_constraintTop_toBottomOf="@id/guideline_time_top"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- Spacer 2H -->
        <View
            android:id="@+id/spacer_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/time_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08" />

        <!-- Knefel "send" 4H -->
        <Button
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/spacer_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.16"
            android:text="@string/sendButtonText" />

        <!-- Spacer 2H -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/send_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>