<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/converter_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EDE5"
    tools:context=".ui.ConvertImageActivity">

    <!-- Info Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoBlock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F0EDE5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Tytuł widoku -->
        <TextView
            android:id="@+id/convertViewTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convertViewTitleText"
            android:textSize="18sp"
            android:gravity="center"
            android:fontFamily="sans-serif"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Spacer -->
        <View
            android:id="@+id/infoSpacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/convertViewTitleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Pic Block -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/picBlock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/infoBlock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1">

        <ImageView
            android:id="@+id/source_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Buttons Block -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsBlock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F0EDE5"
        app:layout_constraintTop_toBottomOf="@id/picBlock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Spacer -->
        <View
            android:id="@+id/spacer_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/optionsContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.0666" />

        <!-- Options Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/optionsContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/spacer_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/spacer_between_spinners_and_first_slider">

            <!-- Algorithm Spinner -->
            <Spinner
                android:id="@+id/algorithm_spinner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/palette_spinner"
                app:layout_constraintEnd_toStartOf="@id/palette_spinner" />

            <!-- Palette Spinner -->
            <Spinner
                android:id="@+id/palette_spinner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/algorithm_spinner"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Spacer -->
        <View
            android:id="@+id/spacer_between_spinners_and_first_slider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/optionsContainer"
            app:layout_constraintBottom_toTopOf="@id/first_slider_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.0666" />

        <!-- First Slider Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_slider_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/spacer_between_spinners_and_first_slider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/spacer_between_sliders">

            <SeekBar
                android:id="@+id/first_param_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/first_param_input"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.7"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/first_param_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/first_param_slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Spacer -->
        <View
            android:id="@+id/spacer_between_sliders"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/first_slider_container"
            app:layout_constraintBottom_toTopOf="@id/second_slider_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.0333" />

        <!-- Second Slider Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second_slider_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/spacer_between_sliders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/spacer_below_second_slider">

            <SeekBar
                android:id="@+id/second_param_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/second_param_input"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/second_param_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/second_param_slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Spacer -->
        <View
            android:id="@+id/spacer_below_second_slider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/second_slider_container"
            app:layout_constraintBottom_toTopOf="@id/button_preview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.0666" />

        <!-- Button 'Show Preview' -->
        <Button
            android:id="@+id/button_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/previewButtonText"
            app:layout_constraintTop_toBottomOf="@id/spacer_below_second_slider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1333" />

        <!-- Spacer -->
        <View
            android:id="@+id/spacer_above_transfer_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/button_preview"
            app:layout_constraintBottom_toTopOf="@id/button_send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.0333" />

        <!-- Button 'Transfer Result' -->
        <Button
            android:id="@+id/button_send"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/transferButtonText"
            app:layout_constraintTop_toBottomOf="@id/spacer_above_transfer_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1333" />

        <!-- Spacer -->
        <View
            android:id="@+id/spacer_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/button_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.0666" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>